Added OffHeap Types and MemorySegments for Vector API