@@ -117,6 +117,7 @@
                             <skippedModules>jvector-examples,jvector-tests</skippedModules>
                             <additionalJOptions>
                                 <additionalJOption>--add-modules=jdk.incubator.vector</additionalJOption>
+                                <additionalJOption>--enable-preview</additionalJOption>
                             </additionalJOptions>
                             <release>20</release>
                         </configuration>
